improved working with coordinates

--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!doctype html>
 <html>
 <head>
-    <link rel="stylesheet" href="StyleSheet.css" media="all" type="text/css" />
-
-    <script src="maps.js"></script>
-    <!--<script src="loader.js"></script> <!--offlineuse-->    
+    <link rel="stylesheet" href="stylesheet.css" media="all" type="text/css" />        
     <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>    
     <script type="text/javascript">Loader.load();</script>
-
+    <script src="maps.js"></script>
     <title>Mapas Maps</title>
 </head>
 <body onload="mapSelector();">
