--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <div id="mapView" style="width:100%; height:100%;"></div>
 
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMapa"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
 
     
 </body>
