Get data function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
         <input type="button" value="Find" onclick="locationSearch();"/>
         <input type="button" id="showWeather" value="get data" onclick="getWeatherData();"/>
 
-        <div id="weatherData"></div>
+        <div id="temperature">Temperature: </div>
+        <div id="weatherDescription">Description: </div>
+        <div id="windSpeed">Wind speed: </div>
     </nav>        
 
     <div id="mapView" style="width:100%; height:100%;"></div>
