Marker details provided

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
     <meta charset="utf-8">
@@ -23,8 +23,8 @@
         </select>
         <input type="text" id="city" value="Jyväskylä">
         <input type="button" value="Find" onclick="locationSearch();"/>
-        <input type="button" id="showWeather" value="get data" onclick="getWeatherData();"/>
 
+        <!-- debug -->
         <div id="temperature">Temperature: </div>
         <div id="weatherDescription">Description: </div>
         <div id="windSpeed">Wind speed: </div>
