Refactor of refreshing

--- a/index.html
+++ b/index.html
@@ -9,31 +9,25 @@
     <script type="text/javascript" src="maps.js"></script>
     <title>Mapas Maps</title>
 </head>
-<body onload="mapSelector();">
+<body onload="refreshView(true);">
 
     <nav id="menu">
-        <select id="selectMapSource" onload="mapSelector();" onchange="mapSelector(this.value);" onmousedown="this.value='';">
+        <select id="selectMapSource" onchange="mapSelector(this.value);" onmousedown="this.value='';">
             <option value="Smap">Seznam maps</option>
             <option value="Gmap">Google Maps</option>
             <!-- dont add more when we are not finished with these... 
                  layers of these maps also as options! Turistic, ...
-                 OSM, BING
+                 OSM, BING, http://www.opencyclemap.org/
                  similar to http://ondras.zarovi.cz/slides/mapyapi-fimuni/examples/podklady/ 
              -->
         </select>
-        <input type="text" id="city" value="Jyväskylä">
+        <input type="text" id="city" value="Jyväskylä Luttako JAMK">
         <input type="button" value="Find" onclick="locationSearch();"/>
-
-        <!-- debug -->
-        <div id="temperature">Temperature: </div>
-        <div id="weatherDescription">Description: </div>
-        <div id="windSpeed">Wind speed: </div>
     </nav>        
 
     <div id="mapView" style="width:100%; height:100%;"></div>
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
-
     
 </body>
 </html>
