--- a/index.html
+++ b/index.html
@@ -1,33 +1,83 @@
 ﻿<!doctype html>
 <html>
+
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="stylesheet.css" media="all" type="text/css" />        
-    <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="stylesheet.css" media="all" type="text/css" />
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ"
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
     <script type="text/javascript">Loader.load();</script>
     <script type="text/javascript" src="maps.js"></script>
+
     <title>Mapas Maps</title>
 </head>
+
 <body onload="refreshView(true);">
 
-    <nav id="menu">
-        <select id="selectMapSource" onchange="mapSelector(this.value);" onmousedown="this.value='';">
-            <option value="Smap">Seznam maps</option>
-            <option value="Gmap">Google Maps</option>
-            <!-- dont add more when we are not finished with these... 
-                 layers of these maps also as options! Turistic, ...
-                 OSM, BING, http://www.opencyclemap.org/
-                 similar to http://ondras.zarovi.cz/slides/mapyapi-fimuni/examples/podklady/ 
-             -->
-        </select>
-        <input type="text" id="city" value="Jyväskylä Luttako JAMK">
-        <input type="button" value="Find" onclick="locationSearch();"/>
-    </nav>        
+    <div class="container appBody">
+        <div class="row align-items-center">
 
-    <div id="mapView" style="width:100%; height:100%;"></div>
+            <div class="col-md-4">
+                <h2>Map services demo</h2>
+            </div>
+
+            <div class="col-md-4">
+                <form>
+                    <div class="form-group">
+                        <label for="selectMapSource">Select map source:</label>
+                        <select class="form-control" id="selectMapSource" onchange="mapSelector(this.value);" onmousedown="this.value='';">
+                            <option value="Smap">Seznam maps</option>
+                            <option value="Gmap">Google Maps</option>
+                            <!-- dont add more when we are not finished with these... 
+                                                                             layers of these maps also as options! Turistic, ...
+                                                                             OSM, BING, http://www.opencyclemap.org/
+                                                                             similar to http://ondras.zarovi.cz/slides/mapyapi-fimuni/examples/podklady/  -->
+
+                        </select>
+                    </div>
+                </form>
+            </div>
+
+            <div class="col-md-4">
+                <form>
+                    <div class="form-group">
+                        <label for="city">Write the city name:</label>
+                        <input type="text" class="form-control" placeholder="Enter the place" id="city" value="Jyväskylä Luttako JAMK">
+                    </div>
+
+                    <button type="submit" class="btn btn-primary" onclick="locationSearch();">Find</button>
+
+                </form>
+            </div>
+
+
+
+        </div>
+
+        <div class="row mapRow">
+            <div class="col-md-12" id="mapView" style="width:100%; height:100%;"></div>
+        </div>
+
+
+        <div class="row card">
+            <h6 class="card-block text-center">Jaroslav Seidel & Ivo Kostecký for JAMK</h6>
+        </div>
+
+
+    </div>
+
+
 
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
-    
+
 </body>
+
 </html>
