--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <h2>Map services demo</h2>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <form>
                     <div class="form-group">
                         <label for="selectMapSource">Select map source:</label>
@@ -46,16 +46,20 @@
                 </form>
             </div>
 
-            <div class="col-md-4">
+            <div class="col-md-3">
                 <form>
                     <div class="form-group">
                         <label for="city">Write the city name:</label>
                         <input type="text" class="form-control" placeholder="Enter the place" id="city" value="Jyväskylä Luttako JAMK">
                     </div>
 
-                    <button type="submit" class="btn btn-primary" onclick="locationSearch();">Find</button>
+
 
                 </form>
+            </div>
+
+            <div class="col-md-2">
+                <button type="button" class="btn btn-primary" onclick="locationSearch();">Find</button>
             </div>
 
 
