--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </select>
             </div>
             <div class="col-md-3">
-                <input type="text" class="form-control" placeholder="Enter the place" id="city" value="Jyväskylä Luttako JAMK">
+                <input type="text" class="form-control" placeholder="Enter the place" id="city" value="Jyväskylä Lutakko JAMK">
             </div>
             <div class="col-md-2">
                 <button type="button" id="findBtn" class="btn btn-large btn-block btn-primary" onclick="locationSearch();">Find</button>
