--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-core.js" type="text/javascript" charset="utf-8"></script>
-    <script src="http://js.api.here.com/v3/3.0/mapsjs-service.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-core.js"></script>
+    <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-service.js"></script>
+    <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-ui.js"></script>
+    <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
     <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
@@ -25,9 +27,9 @@
             <div class="col-md-3">
                 <select class="form-control" id="selectMapSource" onchange="mapSelector(this.value);" onmousedown="this.value='';">
                     <option value="Smap">Seznam maps</option>
-                    <option value="Gmap">Google Maps</option>
-                    <option value="Hmap">Here Maps</option>
+                    <option value="Gmap">Google Maps</option>                    
                     <option value="Bmap">Bing maps</option>
+                    <option value="Hmap">Here Maps</option>
                     <!-- dont add more when we are not finished with these...  layers of these maps also as options! Turistic, ... OSM, BING, http://www.opencyclemap.org/ similar to http://ondras.zarovi.cz/slides/mapyapi-fimuni/examples/podklady/  -->
                 </select>
             </div>
