--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-service.js"></script>
     <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-ui.js"></script>
     <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-mapevents.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://js.cit.api.here.com/v3/3.0/mapsjs-ui.css" />
     <meta name="viewport" content="initial-scale=1.0, width=device-width" />
 
     <script type="text/javascript" src="https://api.mapy.cz/loader.js"></script>
