--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
     <div class="container">
         <div class="row card">
             <h6 class="card-block text-center">CC 2017 - Jaroslav Seidel & Ivo Kostecký for JAMK -
-                <a href="https://docs.google.com/presentation/d/1g7c4UVqYmjbho4nizk6jSxQ2u2JyN68bHLfk4HwqhIY/edit?usp=sharing"
-                    target="_blank">presentation</a>.</h6>
+                <a href="https://goo.gl/fcP44H" target="_blank">presentation</a> - 
+            <a href="https://github.com/microkost/MapasMaps" target="_blank">source code</a>.</h6>
         </div>
     </div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
