Documentation and code cleaning
Online Map Services Comparation Demonstration Project

--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 ﻿<!doctype html>
-<html>
-
+<html  xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
+    <meta property="og:image" content="http://mapas.kostecky.cz/mapas-thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
     <link rel="stylesheet" href="stylesheet.css" media="all" type="text/css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+
+    
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-36455206-7"></script> <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+        gtag('config', 'UA-36455206-7');
+    </script>
 
     <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-core.js" charset="UTF-8"></script>
     <script type="text/javascript" src="https://js.cit.api.here.com/v3/3.0/mapsjs-service.js" charset="UTF-8"></script>
@@ -31,11 +40,11 @@
             </div>
             <div class="col-md-2">
                 <select class="form-control" id="selectMapSource" onchange="mapSelector(this.value);" onmousedown="this.value='';">
-                    <option value="Smap">Seznam maps</option>
-                    <option value="Gmap">Google Maps</option>
-                    <option value="Bmap">Bing maps</option>
+                    <option value="Smap">Seznam Maps</option>
+                <!--<option value="Omap">Open Street map</option>-->
                     <option value="Hmap">Here Maps</option>
-                    <!-- dont add more when we are not finished with these...  layers of these maps also as options! Turistic, ... OSM, BING, http://www.opencyclemap.org/ similar to http://ondras.zarovi.cz/slides/mapyapi-fimuni/examples/podklady/  -->
+                    <option value="Gmap">Google Maps</option>
+                    <option value="Bmap">Bing Maps</option>                    
                 </select>
             </div>
             <div class="col-md-2">
@@ -57,13 +66,14 @@
     </div>
     <div class="container">
         <div class="row card">
-            <h6 class="card-block text-center">CC 2017 - Jaroslav Seidel & Ivo Kostecký for JAMK -
+            <h6 class="card-block text-center">CC 2017 - Jaroslav Seidel & Ivo Kostecký for <a href="https://www.jamk.fi/" target="_blank">JAMK.fi</a> / <a href="https://www.vsb.cz/" target="_blank">VŠB.cz</a> -
                 <a href="https://goo.gl/fcP44H" target="_blank">presentation</a> - 
             <a href="https://github.com/microkost/MapasMaps" target="_blank">source code</a>.</h6>
         </div>
     </div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
     <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
+    <img src="mapas-thumbnail.png" style="display:none"/>
 </body>
 
 </html>
