Documentation and UX added

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!doctype html>
+<!doctype html>
 <html  xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://ogp.me/ns/fb#">
 <head>
     <meta charset="utf-8">
@@ -69,11 +69,11 @@
             <h6 class="card-block text-center">CC 2017 - Jaroslav Seidel & Ivo Kostecký for <a href="https://www.jamk.fi/" target="_blank">JAMK.fi</a> / <a href="https://www.vsb.cz/" target="_blank">VŠB.cz</a> -
                 <a href="https://goo.gl/fcP44H" target="_blank">presentation</a> - 
             <a href="https://github.com/microkost/MapasMaps" target="_blank">source code</a>.</h6>
+            <img src="mapas-thumbnail.png" width="1px" height="1px" />
         </div>
     </div>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbrC1gcahZ3ugGtxRwgHyU4FeTmlGPJCg&callback=showGMap"></script>
-    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>
-    <img src="mapas-thumbnail.png" style="display:none"/>
+    <script type='text/javascript' src='http://www.bing.com/api/maps/mapcontrol?callback=GetMap' async defer></script>    
 </body>
 
 </html>
